--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,9 @@
   padding: 0;
   margin: 0;
 }
+/* html {
+  scroll-behavior: smooth;
+} */
 body {
   color: #666666;
   background: #dddddd;
@@ -372,7 +375,7 @@ a:focus {
 }
 
 .carousel .animated {
-  -webkit-animation-duration: 1.5s;
+  /* -webkit-animation-duration: 1.5s; */
   animation-duration: 1.5s;
 }
 
@@ -1211,10 +1214,6 @@ a:focus {
   font-weight: 300;
   margin: 0;
 }
-
-/**********************************/
-/*********** Sidebar CSS **********/
-/**********************************/
 
 /*******************************/
 /******** Portfolio CSS ********/
